# truchas

./: .gitignore  .gitlab-ci.yml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE.md  NEW-REPO-PUNCHLIST  NEWS.md  README.md  ReleaseNotes-3.0.md  SPACK.md  TPL-LICENSES.md
src/: CMakeLists.txt
src/2d-truchas/: CMakeLists.txt  mesh_example.F90  mesh_example.inp
src/2d-truchas/heat_transfer/: CMakeLists.txt  HT_2d_idaesol_model_type.F90  HT_2d_main.F90  HT_2d_model_type.F90  HT_2d_norm_type.F90  HT_2d_precon_type.F90  HT_2d_sim_type.F90  HT_2d_solver_type.F90  TODO.txt  mfd_2d_diff_matrix_type.F90  mfd_2d_diff_precon_type.F90  mfd_2d_disc_type.F90  new_TofH_type.F90  test_2d_ht.json
src/2d-truchas/materials/: CMakeLists.txt  new_matl_mesh_func_type.F90  new_prop_mesh_func_type.F90
src/2d-truchas/vol_frac_init/: box_region_type.F90  cell_set_region_type.F90  disk_region.F90  f90_assert.F90  half_plane_region.F90  plane_region_type.F90  region2d_class.F90  region_class.F90  sphere_region_type.F90
src/2d-truchas/volume_fractions/: CMakeLists.txt  box_region_type.F90  cell_set_region_type.F90  disk_region_type.F90  half_plane_region_type.F90  region_class.F90  region_factory.F90  region_func_type.F90  vol_frac_init_procs.F90
src/2d-truchas/volume_tracking/: CMakeLists.txt  cell_geom_2d_vof_type.F90  circleadv_vof.txt  circleaxialfl_vof.txt  circleaxisym_vof.txt  circleaxisym_vof_mixedmesh.txt  circlevort_vof.txt  gaussian_quadrature_vofinit.F90  geom_axisymmetric.F90  geometric_volume_tracker_type.F90  gradient_2d_cc_function.F90  input_advection.txt  input_axialflow.txt  input_axisymmetric.txt  input_axisymmetric_mixedmesh.txt  input_vortex.txt  locate_plane_os_2d_function.F90  plane_2d_type.F90  read_inputfile.F90  simple_volume_tracker_type.F90  truncation_volume_2d_type.F90  truncvolume_2dtest_driver.F90  vof_2d_test_driver.F90  vof_advection.F90  vof_axialflow.F90  vof_axisymmetric.F90  vof_vortex.F90  volume_tracker_2d_class.F90
src/python/: CMakeLists.txt  FileFilter.py  FileFilter.py.in  README.md  TruchasTest.py  TruchasTest.py.in  sample-truchas.py.in  setup.py  truchas.py.in  xdmf-writer.py.in
src/python/Truchas/: CMakeLists.txt  __init__.py.in  __main__.py.in  binary.py.in  configure-include.cmake.in  error.py.in  main.py.in  mpi.py.in  output.py.in
src/python/cmake/: configure-files.cmake  configure-include.cmake.in
src/python/fortran_write/: CMakeLists.txt  __init__.py  fortran_write.f90  fortran_write.py
src/python/grid_mapping/: CMakeLists.txt  __init__.py  grid_mapping.py  grid_mapping_wrapper.F90  grid_mapping_wrapper.f90
src/python/truchas/: TruchasConfig.py.in  TruchasConfigBuild.py.in  TruchasConfigInstall.py.in  TruchasData.py  TruchasDatabase.py  TruchasEMData.py  TruchasEnvironment.py  TruchasMappedData.py.in  TruchasStudy.py  TruchasTest.py  __init__.py  truchas_geometry.py
src/th-electrostatics/: CMakeLists.txt  foo.inp  main.F90  th_electrostatics_sim_type.F90  th_electrostatics_solver_type.F90  thes_sim_type.F90  thes_solver_type.F90
src/tools/: CMakeLists.txt
src/tools/RadE/: CMakeLists.txt  README  README-upgradevff.md  TODO  chaparral.F90  chaparral_c_binding.F90  chaparral_ext.c  chaparral_f77.c  cmpre.F90  genre.F90  genre_command_line.F90  manpage.txt  re_chaparral_vf.F90  re_dist_vf_type.F90  re_encl_type.F90  re_exodus_encl.F90  re_graphics_gmv.F90  re_io.F90  re_toolpath.F90  re_utilities.F90  re_vf_diff_type.F90  scl.F90  scl_f77.c  upgradevff.c  vizre.F90  vizre_command_line.F90
src/tools/mesh_processors/: CMakeLists.txt  meshtranslate.README  meshtranslate.f90
src/tools/post_processors/: CMakeLists.txt  f90_assert.F90  f90_assert.fpp  h5out_type.F90  mapped_restart.F90  write_probes.F90  write_restart.F90
src/tools/th-electrostatics/: CMakeLists.txt  main.F90  thes_bc_type.F90  thes_sim_type.F90  thes_solver_type.F90
src/truchas/: CMakeLists.txt
src/truchas/bcs/: CMakeLists.txt  TruchasFiles.cmake  Update_BCS.F90  bc_atlases.F90  bc_atlases_data_types.F90  bc_atlases_internal.F90  bc_atlases_util.F90  bc_charts.F90  bc_charts_atlases.F90  bc_data_types.F90  bc_displacement_init.F90  bc_enum_types.F90  bc_initialize.F90  bc_operations.F90  bc_operators.F90  bc_pressure_init.F90  bc_regions.F90  bc_specifications.F90
src/truchas/communication/: CMakeLists.txt  TruchasFiles.cmake  ee_gather.fpp  ee_gather_all.fpp  ee_gather_module.F90  en_gather.fpp  en_gather_module.F90  en_scatter.fpp  en_scatter_module.F90  gather_module.F90  gather_parallel_v_s_include.fpp  gather_parallel_v_v_include.fpp  gs_info_module.F90  gs_module.F90  gs_util.F90  index_map_type-collate_impl.F90  index_map_type-distribute_impl.F90  index_map_type-gather_impl.F90  index_map_type-gather_offp_impl.F90  index_map_type-localize_impl.F90  index_map_type-scatter_impl.F90  index_map_type-scatter_offp_impl.F90  index_map_type.F90  nn_gather_all.fpp  nn_gather_module.F90  parallel_communication-broadcast_impl.F90  parallel_communication-collate_impl.F90  parallel_communication-distribute_impl.F90  parallel_communication-gather_impl.F90  parallel_communication-reduce_impl.F90  parallel_communication-scatter_impl.F90  parallel_communication.F90  parallel_info_module.F90  parallel_util_module.F90  scatter_infix_parallel_op_s_s_include.fpp  scatter_infix_parallel_op_s_v_include.fpp  (+3 more)
tbrookparser/: CMakeLists.txt  SimInfo.py  TBrookParse.py  get_aborted_residuals.py  get_time_series.py  help_TBrookParse.txt  problem.py  solid_mech_cyl_coords.README  solid_mech_cyl_coords.py  vtkWriter.py  writeRestart-vtk.py  writeRestart.py
tbrookparser/PythonPackages/: __init__.py  pexpect.py
tpl/: CMakeLists.txt  README.md
tpl/cmake/: exodus_project.cmake  hdf5_project.cmake  hypre_project.cmake  netcdf_project.cmake  petaca_project.cmake  swig_project.cmake  yajl_project.cmake
tpl/config/: README-GCC.md  gcc-parallel.cmake  gcc-serial.cmake  intel-parallel.cmake  intel-serial.cmake  linux-gcc.cmake  linux-intel.cmake  linux-nag.cmake  nag-parallel.cmake  nag-serial.cmake  trinitite.cmake
tpl/tarfiles/: netcdf-4.1.3.patch
(+3609 files in other folders)
